polyphone (1.6) unstable; urgency=low

 * Full screen mode
 * Possibility to export presets from different soundfonts to one sf2
 * Export of samples from different soundfonts is allowed
 * In the virtual keyboard, using "shift" with an arrow makes a quicker move
 * Option to move keyrange or not in the transposition tool for instruments
 * Mutations available for 64' resultant in the organ mixture creation tool
 * Tolerance for opcodes comprising no underscore (sfz opcodes v1)
 * (fix) repetition is ignored when using arrow keys in the virtual keyboard
 * (fix) "0" was not selected when a new value is inserted in the table
 * (fix) forbidden characters are replaced by an underscore when exporting files
 * (fix) selection in the tree now updates the virtual keyboard
 * (fix) copy / paste of elements
 * (fix) GUI fix for mac
 * (fix) loop_mode one-shot caused sometimes a wrong envelop release in the sfz import

 -- Davy Triponney <davy.triponney@gmail.com>  XXX, XX Mar 2015 11:15:10 +0100


polyphone (1.5) UNRELEASED; urgency=low

 * italian translation
 * transposition tool
 * more options when renaming several elements
 * tool to remove all modulators
 * improved copy / paste functions in tables
 * improved copy / paste functions for modulators
 * arrows may be used to play the adjacent key or velocity
 * faster selection of multiple elements in the tree
 * (fix) bug when reading some wav files
 * (fix) sample synchronization in synth
 * (fix) bug when editing modulators

 -- Davy Triponney <davy.triponney@gmail.com>  Mon, 20 Oct 2014 18:37:28 +0100


polyphone (1.4) UNRELEASED; urgency=low

 * faster loading step and count of used / unused elements
 * the key range of the key pressed is displayed at the instrument level
 * middle C is emphasized on the keyboard
 * key names can include sharps or flats
 * button to assign the estimated pitch / correction at the sample level
 * mutations added in the mixture creation tools